# simple-eval

./: .dockerignore  .env.example  .env.local  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  main.py  migrate_agent_active.py  migrate_db.py  migrate_explanation_llm.py  migrate_judge_configs.py  migrate_judge_configs_simple.py  migrate_judge_profiles.py  migrate_llm_configs.py  pyproject.toml  setup_firestore.sh
app/: analytics.py  app.py  connectors.py  database.py  dataset_utils.py  deepeval_engine.py  evaluation_engine.py  export_utils.py  main.py  models.py  pdf_generator.py  run_utils.py  simple_main.py
data/: .gitkeep  chatbot_evaluation_test.xlsx  simple_eval.db  test_basic.csv  test_dataset.csv  test_dataset.jsonl  test_dataset_50_questions.csv
data/datasets/: dataset_1_v1.jsonl  dataset_2_v1.jsonl
static/css/: style.css
static/js/: analytics.js
templates/: about.html  agent_detail.html  agents.html  analytics.html  base.html  business_dashboard.html  chatbot_detail.html  chatbots.html  chatbots_list.html  configs.html  dashboard.html  datasets.html  evaluation_dashboard.html  evaluation_detail.html  evaluations.html  experiment_dashboard.html  experiments.html  judges.html  landing.html  new_agent.html  new_run.html  new_run_focused.html  privacy.html  results.html  run_detail.html  runs.html  upload_dataset.html  upload_dataset_focused.html  waitlist.html
translations/: en.json  fr.json
