[tool.poetry]
name = "evalnow"
version = "0.1.0"
description = "EvalNow - Lightweight chatbot evaluation platform"
authors = ["User"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.43"
aiosqlite = "^0.21.0"
litellm = "^1.75.8"
deepeval = "^3.4.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serve = "main:main"