[tool.poetry]
name = "evalnow"
version = "0.1.0"
description = "EvalNow - AI evaluation made simple. Quick prototype for AI response evaluation"
authors = ["User"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"
google-generativeai = "^0.8.0"
pandas = "^2.3.1"
reportlab = "^4.4.3"
google-cloud-firestore = "^2.21.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serve = "main:main"